turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: ';' expected but 'else' found.
		case 'L' => if(pos!=colors.length-1) brosse(colors(pos+1)); gauche(); avance() else brosse(colors(0)); gauche(); avance()
                                                                                               ^LangtonsAnt:21: error: ';' expected but 'else' found.
				  else brosse(colors(0)); droite(); avance()
                                  ^